--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -16,8 +18,8 @@ body {
   padding-top: 50px;
   padding-left: 50px;
   padding-right: 50px;
-  background: #478aef;
-  color: #cadbf5;
+  background: #3d577e;
+  color: #bed0eb;
 }
 
 h1,
@@ -26,7 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Major Mono Display', sans-serif;
 }
 
 .info {
@@ -48,7 +50,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Major Mono Display', sans-serif;
   font-size: 16px;
   text-align: center;
   line-height: 1;
@@ -83,7 +85,7 @@ h6 {
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   grid-gap: 20px;
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Major Mono Display', sans-serif;
   font-size: 18px;
   color: #5f99f0;
 }
@@ -168,7 +170,7 @@ h6 {
   justify-content: center;
   font-size: 24px;
   line-height: 1.3;
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Major Mono Display', sans-serif;
 }
 
 .game-state.win > div {
